--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <span class="brand__name">Auri</span>
             </div>
             <nav class="site-nav" aria-label="Primary">
+                <a href="#release">Release</a>
                 <a href="#about">About</a>
                 <a href="#timeline">Journey</a>
                 <a href="#skills">Skills</a>
@@ -68,6 +69,28 @@
                     <span class="scroll-indicator__wheel"></span>
                 </span>
                 <span class="scroll-indicator__label">Scroll</span>
+            </div>
+        </section>
+
+        <section class="section release" id="release">
+            <div class="container">
+                <div class="release__inner">
+                    <div class="release__art reveal" data-delay="0">
+                        <img src="assets/img/album.png" alt="Albumcover von Lila Fanta" loading="lazy" />
+                    </div>
+                    <div class="release__info reveal" data-delay="120">
+                        <span class="release__meta">Upcoming Single</span>
+                        <h2 class="section__title">Lila Fanta</h2>
+                        <p>
+                            Meine neue Single droppt bald auf Spotify. Hol dir einen ersten Eindruck, hör in die Preview rein
+                            und sag mir, wie du die Vibes findest.
+                        </p>
+                        <audio class="release__player" controls preload="none">
+                            <source src="assets/js/audio/LILA-FANTA-7.mp3" type="audio/mpeg" />
+                            Dein Browser unterstützt das Audio-Element nicht.
+                        </audio>
+                    </div>
+                </div>
             </div>
         </section>
 
