--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Animated biography for Auri, a 16-year-old music producer and developer from Weimar blending 01099-style beats with secure web tech experiments." />
-    <title>Auri · Bio</title>
+    <title>Auri &middot; Bio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -45,16 +45,16 @@
                 <div class="hero__text reveal" data-delay="0">
                     <p class="eyebrow">Biography</p>
                     <h1>
-                        Hey, ich bin <span class="gradient-text">Auri</span><br />
-                        Music Producer & Dev aus Erfurt.
+                        Hey, I'm <span class="gradient-text">Auri</span><br />
+                        Music Producer & Dev from Erfurt.
                     </h1>
                     <p class="lead">
-                       Mit FL-Studio baue ich 01099-angehauchte Beats, sichere Tools, interaktive Sounds,
-                       Hooks, Vocal-Chains und Web-Experiments.
+                        With FL Studio I craft 01099-flavoured beats, secure tools, interactive sounds,
+                        hooks, vocal chains, and web experiments.
                     </p>
                     <div class="hero__actions">
-                        <a class="btn primary" href="#contact">Schreib mir</a>
-                        <a class="btn ghost" href="#timeline">Mein Weg</a>
+                        <a class="btn primary" href="#contact">Email me</a>
+                        <a class="btn ghost" href="#timeline">My journey</a>
                     </div>
                 </div>
                 <div class="hero__portrait reveal" data-delay="150">
@@ -76,33 +76,32 @@
             <div class="container">
                 <div class="release__inner">
                     <div class="release__art reveal" data-delay="0">
-                        <img src="assets/img/album.png" alt="Albumcover von Lila Fanta" loading="lazy" />
+                        <img src="assets/img/album.png" alt="Album cover for Lila Fanta" loading="lazy" />
                     </div>
                     <div class="release__info reveal" data-delay="120">
                         <span class="release__meta">Upcoming Single</span>
                         <h2 class="section__title">Lila Fanta</h2>
                         <p>
-                            Meine neue Single droppt bald auf Spotify. Hol dir einen ersten Eindruck, hör in die Preview rein
-                            und sag mir, wie du die Vibes findest.
+                            My next single hits Spotify soon. Catch the preview here and let me know how the vibe lands for you.
                         </p>
                         <div class="release__player" data-player>
-                            <button class="player__control player__play" type="button" aria-label="Track abspielen">
+                            <button class="player__control player__play" type="button" aria-label="Play track">
                                 <span class="player__icon player__icon--play" aria-hidden="true"></span>
                             </button>
                             <div class="player__track">
                                 <span class="player__time player__time--current">0:00</span>
-                                <input class="player__seek" type="range" value="0" min="0" max="100" step="0.1" aria-label="Track-Position" disabled />
+                                <input class="player__seek" type="range" value="0" min="0" max="100" step="0.1" aria-label="Track position" disabled />
                                 <span class="player__time player__time--total">0:00</span>
                             </div>
                             <div class="player__volume">
-                                <button class="player__control player__mute" type="button" aria-label="Stumm schalten">
+                                <button class="player__control player__mute" type="button" aria-label="Mute">
                                     <span class="player__icon player__icon--volume" aria-hidden="true"></span>
                                 </button>
-                                <input class="player__volume-slider" type="range" min="0" max="1" step="0.05" value="1" aria-label="Lautstärke" />
+                                <input class="player__volume-slider" type="range" min="0" max="1" step="0.05" value="1" aria-label="Volume" />
                             </div>
                             <audio class="player__audio" preload="metadata">
                                 <source src="assets/js/audio/LILA-FANTA-7%20(mp3cut.net).mp3" type="audio/mpeg" />
-                                Dein Browser unterstützt das Audio-Element nicht.
+                                Your browser does not support the audio element.
                             </audio>
                         </div>
                     </div>
@@ -113,33 +112,39 @@
         <section class="section about" id="about">
             <div class="container grid-2">
                 <div class="reveal" data-delay="0">
-                    <h2 class="section__title">Zwischen Studio und Command Line.</h2>
+                    <h2 class="section__title">Between studio and command line.</h2>
                     <p>
-                        Ich lebe in Deutschland, und plane den Sprung in Musikproduktion oder Tontechnik.
-                        Wenn ich nicht lerne, schraube ich in FL-Studio an melodischen 100–130 BPM Grooves im Stil von 01099 und Jazeek.
+                        I'm based in Germany and chasing the jump into music production or audio engineering.
+                        When I'm not studying, I'm in FL Studio shaping melodic 100-130 BPM grooves inspired by 01099 and Jazeek.
                     </p>
                     <p>
-                        Mein Setup: ESI U22 XT, Neumann XLR-Mikro, UADx 1176, FabFilter Pro-Q 3 und Mic Mod-Ketten à la Gustav & Paul.
-                        Parallel bastle ich an sicheren Web-Stacks, APIs und lokalen Tools, die meinen PC mit einem Klick tweaken.
+                        My setup: ESI U22 XT, Neumann XLR mic, UADx 1176, FabFilter Pro-Q 3, plus Mic Mod chains a la Gustav & Paul.
+                        In parallel I build secure web stacks, APIs, and local tools that tweak my PC with a single click.
                     </p>
                 </div>
-               
+                <div class="about__cards reveal" data-delay="120">
+                    <article class="card">
+                        <h3>Workflow Staples</h3>
+                        <ul>
+                            <li>FL Studio sessions in 100-130 BPM</li>
+                            <li>01099 & Jazeek inspired hook writing</li>
+                            <li>Hybrid audio & security tooling</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Focus Areas</h3>
                         <ul>
-                            <li>01099-inspirierte Tracks & EPs</li>
-                            <li>Vocal Chains & Mixing Templates</li>
-                            <li>Sichere APIs & Tools für Creators</li>
+                            <li>01099-inspired tracks & EPs</li>
+                            <li>Vocal chains & mixing templates</li>
+                            <li>Secure APIs & tools for creators</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Currently Exploring</h3>
                         <ul>
-                            <li>Token Auth & Cookie Security</li>
-                            <li>Anti-Cheat & Data Validation</li>
-                            <li>Linux KDE Plasma & Arch Setups</li>
+                            <li>Token auth & cookie security</li>
+                            <li>Anti-cheat & data validation</li>
+                            <li>Linux KDE Plasma & Arch setups</li>
                         </ul>
                     </article>
                 </div>
@@ -153,30 +158,30 @@
                     <div class="timeline__line" aria-hidden="true"></div>
                     <article class="timeline__item reveal" data-delay="0">
                         <span class="timeline__year">2025</span>
-                        <h3>sichere Beat-Tools</h3>
+                        <h3>Secure beat tools</h3>
                         <p>
-                            entwickle nebenbei sichere Token-Login-Flows für Roblox-Scripts, damit meine Beat-Community geschützte Sessions teilen kann.
+                            Building secure token login flows for Roblox scripts so my beat community can share protected sessions.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="120">
                         <span class="timeline__year">2024</span>
-                        <h3>Studio-Upgrade & Vocal Chains</h3>
+                        <h3>Studio upgrades & vocal chains</h3>
                         <p>
-                            Hab mein Setup mit dem ESI U22 XT, Neumann XLR und 32 GB RAM gepowert, Vocal Chains für Gustav & Paul nachgebaut und mit dem UADx 1176 meine ersten Releases veredelt.
+                            Powered my setup with ESI U22 XT, Neumann XLR, and 32 GB RAM, recreated Gustav & Paul vocal chains, and polished first releases with the UADx 1176.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="240">
                         <span class="timeline__year">2022</span>
-                        <h3>Dual-Boot & PC-Tweaks</h3>
+                        <h3>Dual-boot & PC tweaks</h3>
                         <p>
-                            Z390 AORUS PRO aufgesetzt, RX 6750 XT übertaktet und ein Dual-Boot mit Windows, Arch & KDE Plasma gebaut, um Web-Security-Tests und Beat-Workflows zu trennen.
+                            Set up a Z390 AORUS PRO, overclocked the RX 6750 XT, and built a Windows/Arch/KDE dual-boot to separate web security tests from beat workflows.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="360">
                         <span class="timeline__year">2020</span>
-                        <h3>Erster Beat, erster Traum</h3>
+                        <h3>First beat, first dream</h3>
                         <p>
-                            Mit 01099s "Albau" im Ohr mein erstes Beat-Remake gebaut und beschlossen, Musikproduktion & sichere Tech-Lösungen zusammenzudenken.
+                            Recreated 01099's "Albau" as my first beat and decided to fuse music production with secure tech solutions.
                         </p>
                     </article>
                 </div>
@@ -187,43 +192,43 @@
             <div class="container">
                 <div class="section__header reveal" data-delay="0">
                     <h2 class="section__title">Tools & Superpowers</h2>
-                    <p>Das Gear und die Skills, mit denen ich Beats, Sicherheit und Systeme verbinde.</p>
+                    <p>The gear and skills I use to link beats, security, and systems.</p>
                 </div>
                 <div class="skills__grid">
                     <article class="skill-card reveal" data-delay="0">
                         <h3>Production & Composition</h3>
-                        <p>01099-/Jazeek-Vibe, 100–130 BPM, Hookwriting, Recording & Arrangement.</p>
+                        <p>01099/Jazeek vibe, 100-130 BPM, hook writing, recording & arrangement.</p>
                         <ul>
-                            <li>FA-Studio (aka FL Studio)</li>
+                            <li>FL Studio as main DAW</li>
                             <li>UADx 1176 FET, FabFilter Pro-Q 3</li>
-                            <li>Mic Mod Ketten Gustav/Paul</li>
+                            <li>Mic Mod chains inspired by Gustav & Paul</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="120">
                         <h3>Sound Design & Mixing</h3>
-                        <p>Vocal Sculpting, Layering, Mastering mit Fokus auf cleanen 01099-Punch.</p>
+                        <p>Vocal sculpting, layering, mastering with a clean 01099 punch.</p>
                         <ul>
-                            <li>ESI U22 XT Interface</li>
-                            <li>Neumann XLR Mic + Chains</li>
-                            <li>Referenz-Sessions im Homestudio</li>
+                            <li>ESI U22 XT interface</li>
+                            <li>Neumann XLR mic + chains</li>
+                            <li>Reference sessions in the home studio</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="240">
                         <h3>Interactive Audio Dev</h3>
-                        <p>Web Audio, sichere APIs und Scripting für kollaborative Sessions.</p>
+                        <p>Web audio, secure APIs, and scripting for collaborative sessions.</p>
                         <ul>
                             <li>TypeScript, Node.js & OAuth</li>
-                            <li>CSRF/XSS Prevention</li>
-                            <li>DataStores & Webhooks</li>
+                            <li>CSRF/XSS prevention</li>
+                            <li>DataStores & webhooks</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="360">
                         <h3>Systems & Performance</h3>
-                        <p>PC-Builds, Overclocking-Setups und lokale Automationen für Artists.</p>
+                        <p>PC builds, overclocking setups, and local automations for artists.</p>
                         <ul>
-                            <li>Z390 AORUS PRO Tuning</li>
-                            <li>Windows/Linux Dual-Boots</li>
-                            <li>Automatisierte PC-Tweak-Tools</li>
+                            <li>Z390 AORUS PRO tuning</li>
+                            <li>Windows/Linux dual boots</li>
+                            <li>Automated PC tweak tools</li>
                         </ul>
                     </article>
                 </div>
@@ -236,21 +241,21 @@
                     <article class="spotlight__item reveal" data-delay="0">
                         <h3>Albau (01099) Re-Make</h3>
                         <p>
-                            Reverse-engineered Drums, Chords und Vocal-Chains von "Albau" mit FA-Studio und brachte den Groove auf mein Homestudio-Setup.
+                            Reverse-engineered drums, chords, and vocal chains from "Albau" using FL Studio and brought the groove into my home studio setup.
                         </p>
-                        <span class="tag">Community Lieblingsprojekt</span>
+                        <span class="tag">Community favorite project</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="120">
                         <h3>Secure Beat API</h3>
                         <p>
-                            Eine REST-API mit Token-Auth, CSRF- und Rate-Limits, über die Freund*innen ihre FL-Session-Files sicher austauschen können.
+                            REST API with token auth, CSRF guards, and rate limits so friends can share FL session files securely.
                         </p>
                         <span class="tag">Work in Progress</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="240">
                         <h3>TweakDash Local</h3>
                         <p>
-                            Lokale Web-App, die per Knopfdruck Overclocking-Profile, Audio-Latenz-Modi und Backup-Skripte auf meinem Dual-Boot-System startet.
+                            Local web app that triggers overclocking profiles, audio latency modes, and backup scripts on my dual-boot system with one click.
                         </p>
                         <span class="tag">Beta</span>
                     </article>
@@ -261,10 +266,10 @@
         <section class="section contact" id="contact">
             <div class="container">
                 <div class="contact__inner reveal" data-delay="0">
-                    <h2 class="section__title">Lass uns Beats & Builds verbinden</h2>
+                    <h2 class="section__title">Let's connect beats & builds</h2>
                     <p>
-                        Ich suche nach Collabs für 2026: 01099-Vibe Produktionen, Vocal-Ketten, sichere Web Integrationen oder Tech-Workshops für Artists.
-                        Schreib mir dein Projekt und wir bauen den Sound plus das System dazu.
+                        I'm lining up collabs for 2026: 01099-vibe productions, vocal chains, secure web integrations, or tech workshops for artists.
+                        Tell me about your project and we'll craft the sound plus the system behind it.
                     </p>
                     <div class="contact__actions">
                         <a class="btn primary" href="mailto:privataury@gmail.com">privataury@gmail.com</a>
@@ -277,7 +282,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>© <span id="year"></span> Willube. Crafted with curiosity.</p>
+            <p>&copy; <span id="year"></span> Willube. Crafted with curiosity.</p>
         </div>
     </footer>
 
