--- a/index.html
+++ b/index.html
@@ -48,18 +48,12 @@
                         Music Producer & Dev from Erfurt.
                     </h1>
                     <p class="lead">
-                        With FL Studio I craft 01099-flavoured beats, secure tools, interactive sounds,
+                        With FL Studio I craft interactive sounds,
                         hooks, vocal chains, and web experiments.
                     </p>
                     <div class="hero__actions">
                         <a class="btn primary" href="#contact">Email me</a>
                         <a class="btn ghost" href="#timeline">My journey</a>
-                    </div>
-                </div>
-                <div class="hero__portrait reveal" data-delay="150">
-                    <div class="portrait-frame">
-                        <div class="portrait-glow"></div>
-                        <div class="portrait"></div>
                     </div>
                 </div>
             </div>
