--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <a href="#timeline">Journey</a>
                 <a href="#skills">Skills</a>
                 <a href="#contact">Contact</a>
+                <a href="#impressum">Impressum</a>
             </nav>
             <button class="nav-toggle" aria-label="Open navigation">
                 <span></span>
@@ -45,7 +46,7 @@
                     <p class="eyebrow">Biography</p>
                     <h1>
                         Hey, I'm <span class="gradient-text">Auri</span><br />
-                        Music Producer & Dev from Erfurt.
+                        Music Artist & Dev from Erfurt.
                     </h1>
                     <p class="lead">
                         With FL Studio I craft interactive sounds,
@@ -75,7 +76,7 @@
                         <span class="release__meta">Upcoming Single</span>
                         <h2 class="section__title">Lila Fanta</h2>
                         <p>
-                            My next single hits Spotify soon. Catch the preview here and let me know how the vibe lands for you.
+                            My first single is now on Spotify. Catch the preview here and let me know how the vibe lands for you.
                         </p>
                         <div class="release__player" data-player>
                             <button class="player__control player__play" type="button" aria-label="Play track">
@@ -111,16 +112,13 @@
                         When I'm not studying, I'm in FL Studio shaping melodic 100-130 BPM grooves inspired by 01099 and Jazeek.
                     </p>
                     <p>
-                        My setup: ESI U22 XT, Neumann XLR mic, UADx 1176, FabFilter Pro-Q 3, plus Mic Mod chains a la Gustav & Paul.
-                        In parallel I build secure web stacks, APIs, and local tools that tweak my PC with a single click.
-                    </p>
+                    
                 </div>
                 <div class="about__cards reveal" data-delay="120">
                     <article class="card">
                         <h3>Workflow Staples</h3>
                         <ul>
                             <li>FL Studio sessions in 100-130 BPM</li>
-                            <li>01099 & Jazeek inspired hook writing</li>
                             <li>Hybrid audio & security tooling</li>
                         </ul>
                     </article>
@@ -129,15 +127,6 @@
                         <ul>
                             <li>01099-inspired tracks & EPs</li>
                             <li>Vocal chains & mixing templates</li>
-                            <li>Secure APIs & tools for creators</li>
-                        </ul>
-                    </article>
-                    <article class="card">
-                        <h3>Currently Exploring</h3>
-                        <ul>
-                            <li>Token auth & cookie security</li>
-                            <li>Anti-cheat & data validation</li>
-                            <li>Linux KDE Plasma & Arch setups</li>
                         </ul>
                     </article>
                 </div>
@@ -269,6 +258,21 @@
                         <a class="btn ghost" href="https://github.com/willube" target="_blank" rel="noreferrer">GitHub</a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="section legal" id="impressum" aria-labelledby="impressum-title">
+            <div class="container legal__inner">
+                <h2 class="section__title" id="impressum-title">Impressum</h2>
+                <p class="legal__meta">Angaben gemäß § 5 TMG</p>
+                <p>
+                    <span class="legal__label">Name:</span>
+                    <span>Aury Loco</span>
+                </p>
+                <p>
+                    <span class="legal__label">E-Mail:</span>
+                    <a href="mailto:auripulina@gmail.com">auripulina@gmail.com</a>
+                </p>
             </div>
         </section>
     </main>
