--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <img src="assets/img/album.png" alt="Album cover for Lila Fanta" loading="lazy" />
                     </div>
                     <div class="release__info reveal" data-delay="120">
-                        <span class="release__meta">Upcoming Single</span>
-                        <h2 class="section__title">Lila Fanta</h2>
+                        <span class="release__meta">New Single</span>
+                        <h2 class="section__title">LILA FANTA</h2>
                         <p>
                             My first single is now on Spotify. Catch the preview here and let me know how the vibe lands for you.
                         </p>
